--- a/index.html
+++ b/index.html
@@ -1,45 +1,27 @@
-<!doctype html>
-
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-
-  <title>Learning NetCat (NC)</title>
-  <meta name="description" content="Learning NetCat (NC) The swiss army knife for anything TCP/UDP">
-  <meta name="author" content="Dhruv Kapur">
-
-</head>
-
-<body>
-    <div class="main" markdown="1">
-        Note: This is hosted on dhruvkapur91.github.io/learning-nc
-
-`nc`, as I am told, is a Swiss army knife of all things network. This tool has baffled me for long and it's time I learn how to wield this weapon (for ✌️)
-
-Ultimately I would like to be able to sniff communication between 2 processes, but I'm unsure if that's going to be possible using nc. This is what motivates this post.
-
-# Awesome resources that already exist
-Many kudos to these resources
-- [Man page](http://man.he.net/?topic=nc&section=all )
-- [Udemy's course on - Learn how to hack with NetCat](https://www.udemy.com/course/hacking-with-netcat/)
-- [Learning to use NetCat to its Full potential](https://www.linode.com/docs/networking/diagnostics/netcat/netcat/)
-- [NetCat examples and Cheat Sheet](https://www.varonis.com/blog/netcat-commands/)
-- [Learning to hack with NetCat from scratch](https://www.udemy.com/course/learn-hacking-with-netcat-from-scratch/)
-
-# Introductions  (👋NetCat)
-As the documentation suggests, NetCat enables you to do anything under the Sun (🌞) involving TCP or UDP.
-Things like -
-- Opening connections
-- Sending and receiving data
-- Port Scanning
--
-
-
-# TODOs
-- Create an artwork for nc
-- Create a podcast for nc, would it make sense?
-- Create a video for nc, would it make sense?
-- Create a zine for nc, would it make sense?
-    </div>
-</body>
-</html>
+<p>Note: This is hosted on dhruvkapur91.github.io/learning-nc</p>
+<p><code>nc</code>, as I am told, is a Swiss army knife of all things network. This tool has baffled me for long and it's time I learn how to wield this weapon (for ✌️)</p>
+<p>Ultimately I would like to be able to sniff communication between 2 processes, but I'm unsure if that's going to be possible using nc. This is what motivates this post.</p>
+<h1 id="awesomeresourcesthatalreadyexist">Awesome resources that already exist</h1>
+<p>Many kudos to these resources</p>
+<ul>
+<li><a href="http://man.he.net/?topic=nc&section=all">Man page</a></li>
+<li><a href="https://www.udemy.com/course/hacking-with-netcat/">Udemy's course on - Learn how to hack with NetCat</a></li>
+<li><a href="https://www.linode.com/docs/networking/diagnostics/netcat/netcat/">Learning to use NetCat to its Full potential</a></li>
+<li><a href="https://www.varonis.com/blog/netcat-commands/">NetCat examples and Cheat Sheet</a></li>
+<li><a href="https://www.udemy.com/course/learn-hacking-with-netcat-from-scratch/">Learning to hack with NetCat from scratch</a></li>
+</ul>
+<h1 id="introductionsnetcat">Introductions  (👋NetCat)</h1>
+<p>As the documentation suggests, NetCat enables you to do anything under the Sun (🌞) involving TCP or UDP.
+Things like -</p>
+<ul>
+<li>Opening connections</li>
+<li>Sending and receiving data</li>
+</ul>
+<h2 id="portscanning">- Port Scanning</h2>
+<h1 id="todos">TODOs</h1>
+<ul>
+<li>Create an artwork for nc</li>
+<li>Create a podcast for nc, would it make sense?</li>
+<li>Create a video for nc, would it make sense?</li>
+<li>Create a zine for nc, would it make sense?</li>
+</ul>
