Add. Now the index.html should be generated and can be kept inn sync with the markdown files with little editing needed

--- a/skeleton.html
+++ b/skeleton.html
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learning nc</title>
-    <link rel="stylesheet" type="text/css" href="main.css">
-</head>
-<body>
 <p>Note: This is hosted on dhruvkapur91.github.io/learning-nc</p>
 <p><code>nc</code>, as I am told, is a Swiss army knife of all things network. This tool has baffled me for long and it's time I learn how to wield this weapon (for ✌️)</p>
 <p>Ultimately I would like to be able to sniff communication between 2 processes, but I'm unsure if that's going to be possible using nc. This is what motivates this post.</p>
@@ -25,8 +16,8 @@ Things like -</p>
 <ul>
 <li>Opening connections</li>
 <li>Sending and receiving data</li>
-<li>Port Scanning</li>
 </ul>
+<h2 id="portscanning">- Port Scanning</h2>
 <h1 id="todos">TODOs</h1>
 <ul>
 <li>Create an artwork for nc</li>
@@ -34,5 +25,3 @@ Things like -</p>
 <li>Create a video for nc, would it make sense?</li>
 <li>Create a zine for nc, would it make sense?</li>
 </ul>
-</body>
-</html>
