Fix. Correct the nested lists

--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
         <p>Many kudos to these resources</p>
         <ul>
             <li>Many man pages, like<br />
-                -- <a href="http://man.he.net/?topic=nc&section=all">From linux.de</a>
-                -- <a href="https://www.commandlinux.com/man-page/man1/nc.1.html">From commandlinux.com</a></li>
+                <ul>
+                    <li><a href="http://man.he.net/?topic=nc&section=all">From linux.de</a></li>
+                    <li><a href="https://www.commandlinux.com/man-page/man1/nc.1.html">From commandlinux.com</a></li>
+                </ul>
+            </li>
             <li><a href="https://www.udemy.com/course/hacking-with-netcat/">Udemy's course on - Learn how to hack with
                     NetCat</a></li>
             <li><a href="https://www.linode.com/docs/networking/diagnostics/netcat/netcat/">Learning to use NetCat to
